fixed navbar spacing

--- a/Styles/base.css
+++ b/Styles/base.css
@@ -77,7 +77,7 @@ header {
 .nav-titles {
   display: flex;
   justify-content: space-between;
-  width: 60%;
+  width: 70%;
 }
 
 .nav-titles>a {
